# bambulab_metrics_exporter

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  RELEASE_RULES.md  docker-compose.yml  ha-bambulab-analysis.md  pyproject.toml  requirements-dev.txt  requirements.txt  unraid-bambulab-metrics-exporter.xml
.github/scripts/: push_wiki.py
.github/workflows/: ci.yml  docker-publish.yml  init-wiki.yml  wiki-push.yml  wiki-sync.yml
deploy/: prometheus.recording.yml  prometheus.scrape.yml
deploy/unraid/: bambulab-metrics-exporter.xml
docs/: parity-flags-spec.md
docs/wiki/: Configuration.md  Grafana-Dashboard.md  Home.md  Installation.md  Metrics-Reference.md  Prometheus-Setup.md  Quick-Start.md  Release-Process.md  Troubleshooting.md  _Sidebar.md
examples/: sample_metrics.prom
examples/grafana/: dashboard.sample.json
examples/prometheus/: prometheus.alerts.yml  prometheus.recording.yml  prometheus.scrape.yml
grafana/: dashboard.sample.json
prometheus/: prometheus.alerts.yml  prometheus.recording.yml
scripts/: cloud_connection_test.py  cloud_connection_test_v2.py  verify_auth_env_update.py
src/bambulab_metrics_exporter/: api.py  cloud_auth.py  collector.py  config.py  env_sync.py  flags.py  main.py  metrics.py  models.py  startup.py
src/bambulab_metrics_exporter/client/: base.py  factory.py  local_mqtt.py
src/bambulab_metrics_exporter/templates/: index.html
src/bambulab_prometheus_exporter/: api.py  collector.py  config.py  main.py  metrics.py
src/bambulab_prometheus_exporter/client/: base.py  factory.py  local_mqtt.py
tests/: test_cloud_auth.py  test_cloud_auth_discovery.py  test_cloud_auth_edges.py  test_cloud_auth_http.py  test_cloud_auth_main.py  test_config.py  test_coverage_boost.py  test_factory.py  test_factory_cloud_client.py  test_final_coverage.py  test_flags.py  test_local_mqtt_more.py  test_main.py  test_main_bootstrap.py  test_main_probe.py  test_main_run.py  test_metrics.py  test_metrics_ams_humidity_index.py  test_metrics_ams_phase2.py  test_metrics_coverage.py  test_metrics_more.py  test_models.py  test_models_95.py  test_models_more.py  test_phase1_phase3.py  test_startup_more.py
tests/e2e/: test_collector_cycle_e2e.py
tests/integration/: test_api_contract.py
tests/unit/: test_api.py  test_cloud_auth.py  test_collector.py  test_config.py  test_coverage_boost.py  test_env_sync.py  test_flags.py  test_main.py  test_metrics.py  test_models.py  test_startup.py
tests/unit/api/: test_api.py
(+4 files in other folders)
