[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bambulab-prometheus-exporter"
version = "0.1.0"
description = "Prometheus exporter for Bambu Lab printers"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenClaw Planner" }]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "prometheus-client>=0.20.0,<1.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "paho-mqtt>=2.1.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.6.0,<1.0.0",
  "mypy>=1.10.0,<2.0.0",
]

[project.scripts]
bambulab-exporter = "bambulab_prometheus_exporter.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
exclude = ["tests"]
