[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bambulab-metrics-exporter"
version = "0.1.38"
description = "Prometheus exporter for Bambu Lab printers"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "TheBlackBush" }]
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
bambulab-exporter = "bambulab_metrics_exporter.main:run"
bambulab-cloud-auth = "bambulab_metrics_exporter.cloud_auth:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bambulab_metrics_exporter" = ["templates/*.html", "static/*.png"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ["requirements-dev.txt"]}

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration", "tests/e2e"]
addopts = "--cov=src/bambulab_metrics_exporter --cov-report=term-missing --cov-report=xml:tests/results/coverage.xml --cov-fail-under=90 -o cache_dir=tests/results/.pytest_cache"

[tool.coverage.run]
data_file = "tests/results/.coverage"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
exclude = ["tests"]
